--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -12,5 +12,6 @@
         <li><%= product.category %></li>
     </ul>
     <a href="/products">All Products</a>
+    <a href="/products/<%= product.id  %>/edit">Edit</a>
   </body>
 </html>
