--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -13,9 +13,9 @@
         <label for="price">Price</label>
         <input type="number" name="price" value="<%= product.price %>" placeholder="id="price" placeholder="Price">
         <select name="category" id="category">
-            <option value="fruit">fruit</option>
-            <option value="vegetable">vegetable</option>
-            <option value="dairy">dairy</option>
+            <% for(let category of categories){ %> 
+                <option value="<%= category %>" <%= product.category === category ? 'selected' : '' %>><%= category %></option>
+            <% } %> 
         </select>
         <button type="submit">Submit</button>
     </form>
