--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -13,5 +13,6 @@
       <% } %>
     </ul>
     <a href="/products/new">Add new product</a>
+    <a href="/products">All Products</a>
   </body>
 </html>
