--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -8,8 +8,8 @@
   <body>
     <h1><%= product.name %></h1>
     <ul>
-        <li><%= product.price %></li>
-        <li><%= product.category %></li>
+        <li>Price: <%= product.price %></li>
+        <li>Category: <a href="/products?category=<%= product.category %>"><%= product.category %></a></li>
     </ul>
     <a href="/products">All Products</a>
     <a href="/products/<%= product.id  %>/edit">Edit</a>
